# jieba-rs-yada

./: Cargo.toml  README.md
capi/: Cargo.toml
capi/src/: lib.rs
examples/multiprocess/: Cargo.toml
examples/multiprocess/src/: main.rs
examples/weicheng/: Cargo.toml
examples/weicheng/src/: main.rs
jieba/: Cargo.toml
jieba/benches/: jieba_benchmark.rs
jieba/src/: lib.rs
jieba/src/keywords/: mod.rs  textrank.rs  tfidf.rs
jieba/tests/: test_wasm.rs
