[workspace]
resolver = "3"
members = ["capi", "jieba", "jieba-macros", "examples/weicheng", "examples/multiprocess"]

[workspace.package]
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mrdrivingduck/jieba-rs-yada"

[workspace.dependencies]
# Workspace dependencies
jieba-rs-yada = { version = "0.1.0", path = "jieba" }
jieba-macros = { version = "0.8.0", path = "jieba-macros" }

# Crates.io dependencies
c_fixed_string = { version = "0.2" }
yada = { version = "0.5" }
memmap2 = { version = "0.9" }
libc = { version = "0.2" }
codspeed-criterion-compat = { version = "3.0.5" }
rustc-hash = { version = "2.1" }
include-flate = { version = "0.3.1" }
ordered-float = { version = "5.0" }
phf = { version = "0.13.1" }
phf_codegen = { version = "0.13.1" }
rayon = { version = "1.11" }
regex = { version = "1.11.2" }
wasm-bindgen-test = { version = "0.3.50" }
